--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 
         <style>
             table {
+                font-family: arial, sans-serif;
+                border-collapse: collapse;
                 width: 100%;
-                height: 100%;
             }
+
 
             .textAreaWrapper {
                 width: 100%;
@@ -18,8 +20,11 @@
                 width: 80%;
                 height: 95%;
             }
+
+
+
         </style>
-    </head>
+   </head>
     <body>
         <table>
             <tr>
@@ -30,7 +35,7 @@
                 </td>
                 <td>
                     <div>
-                        <label>Parsed code here</label>
+                        <label>Table of parse code</label>
                     </div>
                 </td>
             </tr>
@@ -42,10 +47,24 @@
                 </td>
                 <td>
                     <div class="textAreaWrapper">
-                        <textarea id="parsedCode" title="Parse code"></textarea>
+
+
+                        <table id="myTable">
+
+                            <tr>
+                                <th>Line</th>
+                                <th>Type</th>
+                                <th>Name</th>
+                                <th>Condition</th>
+                                <th>Value</th>
+                            </tr>
+
+                        </table>
                     </div>
                 </td>
             </tr>
+
+
             <tr>
                 <td>
                     <div>
@@ -56,6 +75,7 @@
                 </td>
             </tr>
         </table>
+
 
         <script src="dist/bundle.js"></script>
     </body>
